# llm-and-rag-examples

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: tsa_rules.txt
src/01_semantic_search_and_rag/: simple-rag.py  simple_semantic_search.py
